                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 12-12-2004 updated: Hebrew language file by okets
  - 12-12-2004 changed: Skin version incremented (as dialogNumeric.xml and dialogGamepad.xml are necessary skin files)
  - 12-12-2004 fixed: Bug in custom window code (custom windows persisted when changing skins)
  - 12-12-2004 fixed: Various bugs found here and there :)
  - 12-12-2004 added: [ 1079275 ] Add share locking ability, thanks to slacker.
  - 12-12-2004 fixed: Various settings screen issues (including http proxy, hopefully!)
  - 12-12-2004 added: New dialog GUIDialogButtonBar for a graphical button bar with optional label
  - 12-12-2004 changed: Slideshow now uses the video filters settings instead of the GUI settings.  (for sharper pictures)
  - 11-12-2004 fixed: LCD time and date obey the GUI settings.
  - 11-12-2004 added: XBMC.ActivateWindow() can now activate dialogs.
  - 11-12-2004 changed: various strings to make them more obvious.
  - 11-12-2004 fixed: Various settings issues (subtitles etc.)
  - 10-12-2004 fixed: [ 1080520 ] web interface: unqueing doesn't work - thanks to re.solve + BombrMan
  - 10-12-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 10-12-2004 updated: Italian language file (Thnx to kotix)
  - 10-12-2004 fixed: [ 1069833 ] white no longer triggers osd.
  - 09-12-2004 added: [ 1063544 ] Full LED Controll within the xbmc GUI, thanks to GeminiServer.
  - 09-12-2004 added: [ 1067203 ] GUI Contrast Control for Xenium-LCD, thanks to GreenGiant.
  - 09-12-2004 added: [ 1065952 ] Disable Internet Lookups option, thanks to kraqh3d.