@@ -230,6 +230,8 @@
 #define WINDOW_DIALOG_HOST			  10108
 #define WINDOW_DIALOG_PASSWORD_NUMERIC  10109
 #define WINDOW_DIALOG_PASSWORD_GAMEPAD  10110
+#define WINDOW_DIALOG_BUTTON_MENU				10111
+
 #define WINDOW_MUSIC_PLAYLIST         10500
 #define WINDOW_MUSIC_FILES            10501
 #define WINDOW_MUSIC_ALBUM            10502
